add cherry pick section

--- a/git_next2.tex
+++ b/git_next2.tex
@@ -133,9 +133,14 @@
 \begin{frame}{Rebase}
 \end{frame}
 
-\subsection{Rebase}
+\subsection{--amend}
 
 \begin{frame}{--amend}
+\end{frame}
+
+\subsection{Cherry Pick (doesn't change history)}
+
+\begin{frame}{Cherry Pick (doesn't change history)}
 \end{frame}
 
 \section{DOs and DON'Ts}
