use todays english date for presentations front-page

--- a/git_next.tex
+++ b/git_next.tex
@@ -11,7 +11,7 @@
 
 %%% ngerman: language set to new-german
 %\usepackage{german}
-\usepackage[ngerman]{babel}
+\usepackage[ngerman,english]{babel}
 %%% inputenc: coding of german special characters
 \usepackage[utf8]{inputenc}
 %%% fontenc, ae, aecompl: coding of characters in PDF documents
@@ -38,7 +38,7 @@
 % - Keep it simple, niemand interessiert sich für die genau Adresse.
 
 \date[] % (optional, sollte der abgekürzte Konferenzname sein)
-{2010-12-10}
+{\today}
 % - Voller oder abgekürzter Name sind möglich.
 % - Dieser Eintrag ist nicht für das Publikum gedacht (das weiß
 %   nämlich, bei welcher Konferenz es ist), sondern für Leute, die die
