add another frame on how we got to version control

--- a/git_next.tex
+++ b/git_next.tex
@@ -44,7 +44,7 @@
 %   nämlich, bei welcher Konferenz es ist), sondern für Leute, die die
 %   Folien später lesen.
 
-\subject{}
+\subject{Git - Next Generation Version Control}
 % Dies wird lediglich in den PDF Informationskatalog einfügt. Kann gut
 % weggelassen werden.
 
@@ -130,6 +130,11 @@
 \end{frame}
 
 \section{Version Control}
+
+\subsection{History}
+
+\begin{frame}{How did we get to what we call Version Control today?}
+\end{frame}
 
 \subsection{Local Version Control}
 
