--- a/git_next.tex
+++ b/git_next.tex
@@ -301,7 +301,7 @@
     \hfill\vfill
 \end{frame}
 
-\begin{frame}{Branch pointing intoi the commit data's history.}
+\begin{frame}{Branch pointing into the commit data's history.}
     \pgfdeclareimage[height=5cm]{local computer}{img/18333fig0303-tn}
     \centering
     \pgfuseimage{local computer}
