--- a/git_next2.tex
+++ b/git_next2.tex
@@ -234,7 +234,7 @@
     \item
       !!
     \item
-      unless you know exaclty what you're doing
+      unless you know exactly what you're doing
   \end{itemize}
 \end{frame}
 
